--- a/BO3/index.html
+++ b/BO3/index.html
@@ -4,6 +4,17 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<p>
+				<span class="label label-default">v 3.2.1</span>
+				<span class="label label-primary">RC</span>
+				<span class="label label-success">Revision 1</span>
+				<span class="label label-danger">in Dev / Ready for Production, but be careful</span>
+			</p>
+			<ul class="list-unstyled">
+				<li>New Design</lli>
+				<li>bo3 class instead of functions class</lli>
+				<li>db variable instead of mysqli variable</lli>
+			</ul>
+			<p>
 				<span class="label label-default">v 3.1.0</span>
 				<span class="label label-primary">RC</span>
 				<span class="label label-success">Revision 1</span>
