--- a/BO3/jquery.html
+++ b/BO3/jquery.html
@@ -1,1 +1,1 @@
-<script async src="//code.jquery.com/jquery-3.2.1.min.js" ></script>
+<script src="//code.jquery.com/jquery-3.2.1.min.js" ></script>
