Update classes from bootstrap 3 to 4

--- a/BO3/index.html
+++ b/BO3/index.html
@@ -4,10 +4,10 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-md-4">
 			<p>
-				<span class="label label-default">v 3.2.1</span>
-				<span class="label label-primary">RC</span>
-				<span class="label label-success">Revision 1</span>
-				<span class="label label-danger">in Dev / Ready for Production, but be careful</span>
+				<span class="badge badge-default">v 3.2.1</span>
+				<span class="badge badge-primary">RC</span>
+				<span class="badge badge-success">Revision 1</span>
+				<span class="badge badge-danger">in Dev / Ready for Production, but be careful</span>
 			</p>
 			<ul class="list-unstyled">
 				<li>New Design</lli>
@@ -15,15 +15,15 @@
 				<li>db variable instead of mysqli variable</lli>
 			</ul>
 			<p>
-				<span class="label label-default">v 3.1.0</span>
-				<span class="label label-primary">RC</span>
-				<span class="label label-success">Revision 1</span>
-				<span class="label label-danger">in Dev / Ready for Production, but be careful</span>
+				<span class="badge badge-default">v 3.1.0</span>
+				<span class="badge badge-primary">RC</span>
+				<span class="badge badge-success">Revision 1</span>
+				<span class="badge badge-danger">in Dev / Ready for Production, but be careful</span>
 			</p>
 			<p>
-				<span class="label label-default">v 3.0.0</span>
-				<span class="label label-primary">Beta</span>
-				<span class="label label-danger">in Dev / Ready for Production, but be careful</span>
+				<span class="badge badge-default">v 3.0.0</span>
+				<span class="label badge-primary">Beta</span>
+				<span class="badge badge-danger">in Dev / Ready for Production, but be careful</span>
 			</p>
 			<ul class="list-unstyled">
 				<li>Users Module</lli>
@@ -32,10 +32,10 @@
 				<li>Articles Module</lli>
 			</ul>
 			<p>
-				<span class="label label-default">v 3.0.0</span>
-				<span class="label label-primary">Alpha</span>
-				<span class="label label-success">Revision 1</span>
-				<span class="label label-danger">in Dev / Not Ready for Production</span>
+				<span class="badge badge-default">v 3.0.0</span>
+				<span class="badge badge-primary">Alpha</span>
+				<span class="badge badge-success">Revision 1</span>
+				<span class="badge badge-danger">in Dev / Not Ready for Production</span>
 			</p>
 			<ul class="list-unstyled">
 				<li>Bootstrap Based</li>
@@ -54,7 +54,7 @@
 			<h3>Work in progress</h3>
 			<ul class="list-unstyled">
 				<li>
-					<span class="label label-success">module</span> Users
+					<span class="badge badge-success">module</span> Users
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -64,7 +64,7 @@
 					</div>
 				</li>
 				<li>
-					<span class="label label-success">module</span> Account Edit
+					<span class="badge badge-success">module</span> Account Edit
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="80"
@@ -74,7 +74,7 @@
 					</div>
 				</li>
 				<li>
-					<span class="label label-success">module</span> Categories
+					<span class="badge badge-success">module</span> Categories
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="20"
@@ -84,7 +84,7 @@
 					</div>
 				</li>
 				<li>
-					<span class="label label-success">module</span> Articles
+					<span class="badge badge-success">module</span> Articles
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="5"
@@ -94,7 +94,7 @@
 					</div>
 				</li>
 				<li>
-					<span class="label label-success">module</span> Products
+					<span class="badge badge-success">module</span> Products
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -104,7 +104,7 @@
 					</div>
 				</li>
 				<li>
-					<span class="label label-success">module</span> File Manager
+					<span class="badge badge-success">module</span> File Manager
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -114,7 +114,7 @@
 					</div>
 				</li>
 				<li>
-					<span class="label label-danger">plugin</span> Upload
+					<span class="badge badge-danger">plugin</span> Upload
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" aria-valuenow="70"
