Update upcoming modules

--- a/BO3/index.html
+++ b/BO3/index.html
@@ -104,6 +104,36 @@
 					</div>
 				</li>
 				<li>
+					<span class="badge badge-success">module</span> Pages
+					<div class="xs-spacer15 sm-spacer15"></div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="70"
+					aria-valuemin="0" aria-valuemax="100" style="width:0%">
+							<span class="sr-only">0% Complete</span>
+						</div>
+					</div>
+				</li>
+				<li>
+					<span class="badge badge-success">module</span> Menus
+					<div class="xs-spacer15 sm-spacer15"></div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="70"
+					aria-valuemin="0" aria-valuemax="100" style="width:0%">
+							<span class="sr-only">0% Complete</span>
+						</div>
+					</div>
+				</li>
+				<li>
+					<span class="badge badge-success">module</span> Translations
+					<div class="xs-spacer15 sm-spacer15"></div>
+					<div class="progress">
+						<div class="progress-bar" role="progressbar" aria-valuenow="70"
+					aria-valuemin="0" aria-valuemax="100" style="width:0%">
+							<span class="sr-only">0% Complete</span>
+						</div>
+					</div>
+				</li>
+				<li>
 					<span class="badge badge-success">module</span> File Manager
 					<div class="xs-spacer15 sm-spacer15"></div>
 					<div class="progress">
